recursion.lessons.recursion.koch.Koch.scala.error
Koch:12: error: not found: value snowflake
	snowflake(0,200)
        ^